--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <footer>
         <p>&copy; 2016 St Huxley's Community College</p>
         <p>lorem</p>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
     </footer>
 </body>
 </html>
